# dtext

./: README.md  dtext.cabal
src/Data/: DText.hs
